--- a/src/components/About/about.css
+++ b/src/components/About/about.css
@@ -13,7 +13,7 @@
     margin-top: 10rem;
     margin-inline: 10rem;
     position:absolute;
-    top:0;
+    top:-30px;
     mix-blend-mode: difference;
     color: white;
     z-index: 3;
@@ -21,6 +21,8 @@
     font-style: normal;
     font-weight: 600;
     font-size: 35px;
+    text-align: justify;
+    line-height: 120%;
 }
 
 #whitebg { 
