Improved small devices display

--- a/src/components/BigTitle/bigtitle.css
+++ b/src/components/BigTitle/bigtitle.css
@@ -19,3 +19,9 @@
 .bigtitle-projects {
     visibility: hidden;
 }
+
+@media only screen and (max-width: 650px) {
+    .bigtitle-first {
+        margin-left: 1rem;
+    }
+}
