--- a/src/components/MainHeading/mainheading.css
+++ b/src/components/MainHeading/mainheading.css
@@ -28,7 +28,7 @@
     gap:10px;
     position: absolute;
     right: 50px;
-    top: 40%;
+    top: 30%;
     max-width: 25px;
 }
 
@@ -49,6 +49,9 @@
     }
     .mouse-container {
         max-width: 15px;
+    }
+    .about-title {
+        margin-left: 1rem;
     }
 }
 
