--- a/src/components/GithubLogo/githublogo.css
+++ b/src/components/GithubLogo/githublogo.css
@@ -4,3 +4,10 @@
     cursor: pointer;
     margin-left: 4rem;
 }
+
+@media only screen and (max-width: 650px) {
+    .github-logo {
+        margin-left: 1.5rem;
+        width: 40px;
+    }
+}
