--- a/src/components/MainHeading/mainheading.css
+++ b/src/components/MainHeading/mainheading.css
@@ -49,9 +49,11 @@
     }
     .mouse-container {
         max-width: 15px;
+        top:20%;
+        right:30px;
     }
     .about-title {
-        margin-left: 1rem;
+        margin-left: 1.5rem;
     }
 }
 
