Improved overall design

--- a/src/components/ProjectDetails/projectdetails.css
+++ b/src/components/ProjectDetails/projectdetails.css
@@ -65,7 +65,8 @@
 .project-second-row {
     display: flex;
     flex-flow: row wrap;
-    gap:50px;
+    gap:75px;
+    align-items: center;
 }
 
 .project-details-title {
