Reverse column on small screens

--- a/src/components/ProjectDetails/projectdetails.css
+++ b/src/components/ProjectDetails/projectdetails.css
@@ -100,3 +100,9 @@
         line-height: normal; 
     }
 }
+
+@media only screen and (max-width: 884px) {
+    .second-explication {
+        flex-flow: column-reverse;
+    }
+}
