--- a/src/components/ProjectsContainer/projectscontainer.css
+++ b/src/components/ProjectsContainer/projectscontainer.css
@@ -41,3 +41,9 @@
         padding-top: 0;
     }
 }
+
+@media only screen and (max-width: 600px) {
+    .container-projects {
+        padding-block: 2rem;
+    }
+}
