Changed position on project page

--- a/src/components/MouseScroll/mouse-scroll.css
+++ b/src/components/MouseScroll/mouse-scroll.css
@@ -9,6 +9,10 @@
     max-width: 25px;
 }
 
+.mouse-container-project {
+    top: 70%;
+}
+
 .mouse-container-text {
     margin-top: 32px;
     font-family: 'PP Mori';
