--- a/src/components/Navbar/navbar.css
+++ b/src/components/Navbar/navbar.css
@@ -53,15 +53,19 @@ a {
 }
 
 .vertical-navbar {
+    position: fixed;
+    top:0;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    position: relative;
+    z-index: 5;
     display: none;
-    gap:10px;
-    padding: 25px;
+    gap:40px;
     color: white;
+    background-color: #131313;
+    width: 100%;
+    height: 100%;
 }
 
 @media only screen and (max-width: 650px) {
