--- a/src/components/MainHeading/mainheading.css
+++ b/src/components/MainHeading/mainheading.css
@@ -28,6 +28,9 @@
     .about-title {
         margin-left: 1.5rem;
     }
+    .background-line {
+        margin-top: 3.5rem;
+    }
 }
 
 @media only screen and (min-width: 850px) {
