--- a/src/components/BigTitle/bigtitle.css
+++ b/src/components/BigTitle/bigtitle.css
@@ -23,5 +23,6 @@
 @media only screen and (max-width: 650px) {
     .bigtitle-first {
         margin-left: 1.5rem;
+        margin-bottom: 1rem;
     }
 }
