--- a/src/components/ProjectsText/projects-text.css
+++ b/src/components/ProjectsText/projects-text.css
@@ -7,8 +7,15 @@
 }
 
 .projects-text p {
-    max-width: 1000px;
+    max-width: 700px;
     font-weight: 600;
     font-size: 16px;
     line-height: 17px;
+}
+
+@media only screen and (max-width: 650px) {
+    .projects-text {
+        padding: 1rem;
+        padding-top: 3rem;
+    }
 }
