--- a/src/components/Navbar/navbar.css
+++ b/src/components/Navbar/navbar.css
@@ -60,11 +60,12 @@ a {
     align-items: center;
     z-index: 5;
     display: none;
-    gap:40px;
+    gap:50px;
     color: white;
     background-color: #131313;
     width: 100%;
     height: 100%;
+    font-size: larger;
 }
 
 @media only screen and (max-width: 650px) {
