Skills used for each project

--- a/src/components/ProjectDetails/projectdetails.css
+++ b/src/components/ProjectDetails/projectdetails.css
@@ -69,6 +69,12 @@
     align-items: center;
 }
 
+.project-skills {
+    display: flex;
+    justify-content: center;
+    gap:100px;
+}
+
 .project-details-title {
     position: relative;
 }
@@ -95,6 +101,9 @@
     .project-picture-container {
         flex-basis: 1;
     }
+    .project-skills {
+        gap: 75px;
+    }
 }
 
 @media only screen and (max-width: 600px) {
@@ -114,5 +123,10 @@
 @media only screen and (max-width: 884px) {
     .second-explication {
         flex-flow: column-reverse;
+    }
+    .project-skills {
+        flex-direction: column;
+        align-items: center;
+        gap: 50px;
     }
 }
