--- a/src/components/CustomCursor/custom-cursor.css
+++ b/src/components/CustomCursor/custom-cursor.css
@@ -9,3 +9,9 @@
     z-index: 1000;
     pointer-events: none;
 }
+
+@media only screen and (max-width: 650px) {
+    .custom-cursor {
+        display: none;
+    }
+}
