Improved Skills section

--- a/src/components/Skill/skill.css
+++ b/src/components/Skill/skill.css
@@ -35,6 +35,9 @@
     .skill-text {
         left: 40%;
     }
+    .skill-text p{
+        margin-left: -50%;
+    }
 }
 
 .skill { transition: all .3s ease-in-out; }
