Custom cursor is now displayed everywhere

--- a/src/components/ProjectsContainer/projectscontainer.css
+++ b/src/components/ProjectsContainer/projectscontainer.css
@@ -6,6 +6,7 @@
     gap:250px;
     padding-block: 6rem;
     padding-inline: 1rem;
+    background-color: white;
 }
 
 .container-projects .column{
