--- a/src/components/About/about.css
+++ b/src/components/About/about.css
@@ -1,6 +1,7 @@
 .about {
     padding-block: 8rem;
-    margin-right: 3rem;
+    padding-right: 3rem;
+    background-color: white;
 }
 
 .about-text-container {
@@ -102,7 +103,7 @@
     .about {
         padding-top: 5rem;
         padding-bottom: 3rem;
-        margin-right: 0;
+        padding-right: 0;
     }
     .github-container {
         justify-content:center;
