--- a/src/components/CustomCursor/custom-cursor.css
+++ b/src/components/CustomCursor/custom-cursor.css
@@ -8,6 +8,7 @@
     border: 2px solid white;
     z-index: 1000;
     pointer-events: none;
+    mix-blend-mode: difference;
 }
 
 @media only screen and (max-width: 650px) {
